orchestrator adds task only if not exists. Replaced URL to URI due to hashCode impl