@@ -1,7 +1,8 @@
 package org.openspaces.servicegrid;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.util.Comparator;
 import java.util.Set;
 import java.util.logging.Logger;
 
@@ -21,35 +22,39 @@ import org.openspaces.servicegrid.streams.StreamConsumer;
 import org.openspaces.servicegrid.streams.StreamProducer;
 import org.openspaces.servicegrid.time.MockCurrentTimeProvider;
 import org.testng.Assert;
+import org.testng.annotations.AfterMethod;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
 
+import com.google.common.base.Predicate;
 import com.google.common.base.Throwables;
 import com.google.common.collect.Iterables;
-import com.google.common.collect.Lists;
+import com.google.common.collect.Multiset;
 import com.google.common.collect.Sets;
+import com.google.common.collect.TreeMultiset;
 
 public class ServiceGridOrchestrationTest {
 	
 	private ServiceClient client;
 	private Set<MockTaskContainer> containers;
-	private URL orchestratorExecutorId;
+	private URI orchestratorExecutorId;
 	private MockTaskContainer orchestratorContainer;
 	private MockStreams<TaskExecutorState> state;
 	private StreamConsumer<Task> taskConsumer;
 	private final Logger logger = Logger.getLogger(this.getClass().getName());
+	private MockStreams<Task> taskBroker;
 	
 	@BeforeMethod
 	public void before() {
 		
-		final URL cloudExecutorId;
-		final URL agentLifecycleExecutorId;
+		final URI cloudExecutorId;
+		final URI agentLifecycleExecutorId;
 		
 		try {
-			orchestratorExecutorId = new URL("http://localhost/services/tomcat/");
-			cloudExecutorId = new URL("http://localhost/services/cloud");
-			agentLifecycleExecutorId = new URL("http://localhost/services/agentLifecycle");
-		} catch (MalformedURLException e) {
+			orchestratorExecutorId = new URI("http://localhost/services/orchestrator/");
+			cloudExecutorId = new URI("http://localhost/services/cloud/");
+			agentLifecycleExecutorId = new URI("http://localhost/services/agentLifecycle/");
+		} catch (URISyntaxException e) {
 			throw Throwables.propagate(e);
 		}
 		
@@ -57,7 +62,7 @@ public class ServiceGridOrchestrationTest {
 		StreamProducer<TaskExecutorState> stateWriter = state;
 		StreamConsumer<TaskExecutorState> stateReader = state;
 	
-		MockStreams<Task> taskBroker = new MockStreams<Task>();
+		this.taskBroker = new MockStreams<Task>();
 		StreamProducer<Task> taskProducer = taskBroker;
 		taskConsumer = taskBroker;
 		
@@ -83,14 +88,15 @@ public class ServiceGridOrchestrationTest {
 						serviceOrchestratorParameter),
 				orchestratorTimeProvider);
 
-		containers = Sets.newCopyOnWriteArraySet(Lists.newArrayList(
+		containers = Sets.newCopyOnWriteArraySet();
+		addContainers(
 				orchestratorContainer,				
 				new MockTaskContainer(
 						cloudExecutorId, 
 						stateReader, stateWriter,
 						taskConsumer, 
 						new MockImmediateMachineSpawnerTaskExecutor(),
-						orchestratorTimeProvider),
+						new MockCurrentTimeProvider()),
 						
 				new MockTaskContainer(
 						agentLifecycleExecutorId, 
@@ -100,29 +106,75 @@ public class ServiceGridOrchestrationTest {
 							
 							@Override
 							public void wrapTaskExecutor(
-									TaskExecutor<? extends TaskExecutorState> taskExecutor, URL executorId) {
-								containers.add(new MockTaskContainer(executorId, state, state, taskConsumer, taskExecutor, orchestratorTimeProvider));
+									Object taskExecutor, URI executorId) {
+								
+								MockTaskContainer container = new MockTaskContainer(executorId, state, state, taskConsumer, taskExecutor, new MockCurrentTimeProvider());
+								addContainer(container);
 							}
-							
-							@Override
-							public void wrapImpersonatingTaskExecutor(
-									ImpersonatingTaskExecutor<? extends TaskExecutorState> impersonatingTaskExecutor, URL executorId) {
-								containers.add(new MockTaskContainer(executorId, state, state, taskConsumer, impersonatingTaskExecutor, orchestratorTimeProvider));								
-							}
+
 						}
 						),
-						orchestratorTimeProvider)
-				));
+						new MockCurrentTimeProvider())
+		);
+	}
+	
+	private void addContainers(MockTaskContainer ... newContainers) {
+		for (MockTaskContainer  container : newContainers) {
+			addContainer(container);
+		}
+	}
+	
+	private void addContainer(MockTaskContainer container) {
+		logger.info("Adding container for " + container.getExecutorId());
+		containers.add(container);
+	}
+	
+	@AfterMethod
+	public void after() throws URISyntaxException {
+		Iterable<Task> tasks = filterOrchestratorTasks(getSortedTasks());
+		for (final Task task : tasks) {
+			logger.info(task.getSourceTimestamp() + " target: " + task.getTarget() + " type:"+task.getClass());
+		}
+	}
+
+	Iterable<Task> filterOrchestratorTasks(Iterable<Task> unfiltered) {
+		return Iterables.filter(unfiltered, new Predicate<Task>(){
+
+			@Override
+			public boolean apply(Task task) {
+				return orchestratorExecutorId.equals(task.getSource());
+			}});
+	}
+	
+	private Iterable<Task> getSortedTasks() throws URISyntaxException {
+		final Iterable<URI> taskExecutorIds = taskBroker.getElementIdsStartingWith(new URI("http://localhost/"));
+		Multiset<Task> sortedTasks = TreeMultiset.create(
+				new Comparator<Task>() {
+
+			@Override
+			public int compare(Task o1, Task o2) {
+				if (o1.getSourceTimestamp() == null) return 1;
+				if (o2.getSourceTimestamp() == null) return -1;
+				return o1.getSourceTimestamp().compareTo(o2.getSourceTimestamp());
+			}
+		});
+		for (final URI taskExecutorId : taskExecutorIds) {
+			for (URI taskId = taskBroker.getFirstElementId(taskExecutorId); taskId != null ; taskId = taskBroker.getNextElementId(taskId)) {
+				final Task task = taskBroker.getElement(taskId, Task.class);
+				sortedTasks.add(task);
+			}
+		}
+		return sortedTasks;
 	}
 	
 	@Test
-	public void installSingleInstanceServiceTest() throws MalformedURLException {
+	public void installSingleInstanceServiceTest() throws URISyntaxException {
+		logger.info("Starting installSingleInstanceServiceTest URIs: " + state.getElementIdsStartingWith(new URI("http://localhost/")));
 		installService("tomcat", 1);
 		execute();
-		
-		final ServiceState serviceState = state.getElement(state.getLastElementId(getServiceUrl("tomcat")), ServiceState.class);
+		final ServiceState serviceState = state.getElement(state.getLastElementId(getServiceURI("tomcat")), ServiceState.class);
 		Assert.assertEquals(Iterables.size(serviceState.getInstancesIds()),1);
-		logger.info("URLs: " + state.getElementIdsStartingWith(new URL("http://localhost/")));
+		logger.info("URIs: " + state.getElementIdsStartingWith(new URI("http://localhost/")));
 		ServiceInstanceState instanceState = getOnlyServiceInstanceState();
 		Assert.assertEquals(instanceState.getDisplayName(), "tomcat");
 		Assert.assertEquals(instanceState.getProgress(), ServiceInstanceState.Progress.INSTANCE_STARTED);
@@ -130,25 +182,26 @@ public class ServiceGridOrchestrationTest {
 		Assert.assertEquals(instanceState.getAgentExecutorId(),getOnlyAgentId());
 	}
 
-	private URL getOnlyAgentId() throws MalformedURLException {
+	private URI getOnlyAgentId() throws URISyntaxException {
 		return Iterables.getOnlyElement(getAgentIds());
 	}
 	
 	@Test
-	public void installMultipleInstanceServiceTest() throws MalformedURLException {
+	public void installMultipleInstanceServiceTest() throws URISyntaxException {
+		logger.info("Starting installMultipleInstanceServiceTest");
 		installService("tomcat", 2);
 		execute();
 		
-		final ServiceState serviceState = state.getElement(state.getLastElementId(getServiceUrl("tomcat")), ServiceState.class);
+		final ServiceState serviceState = state.getElement(state.getLastElementId(getServiceURI("tomcat")), ServiceState.class);
 		Assert.assertEquals(Iterables.size(serviceState.getInstancesIds()),2);
-		logger.info("URLs: " + state.getElementIdsStartingWith(new URL("http://localhost/")));
-		Iterable<URL> instanceIds = state.getElementIdsStartingWith(new URL("http://localhost/services/tomcat/instances/"));
+		logger.info("URIs: " + state.getElementIdsStartingWith(new URI("http://localhost/")));
+		Iterable<URI> instanceIds = state.getElementIdsStartingWith(new URI("http://localhost/services/tomcat/instances/"));
 		Assert.assertEquals(Iterables.size(instanceIds),2);
 		
-		Iterable<URL> agentIds = getAgentIds();
+		Iterable<URI> agentIds = getAgentIds();
 		Assert.assertEquals(Iterables.size(agentIds), 2);
-		for (URL url : instanceIds) {
-			ServiceInstanceState instanceState = state.getElement(state.getLastElementId(url), ServiceInstanceState.class);
+		for (URI URI : instanceIds) {
+			ServiceInstanceState instanceState = state.getElement(state.getLastElementId(URI), ServiceInstanceState.class);
 			Assert.assertEquals(instanceState.getDisplayName(), "tomcat");
 			Assert.assertEquals(instanceState.getProgress(), ServiceInstanceState.Progress.INSTANCE_STARTED);
 			Assert.assertTrue(Iterables.contains(agentIds, instanceState.getAgentExecutorId()));
@@ -156,15 +209,16 @@ public class ServiceGridOrchestrationTest {
 	}
 	
 	@Test
-	public void agentFailoverTest() throws MalformedURLException {
+	public void agentFailoverTest() throws URISyntaxException {
+		logger.info("Starting agentFailoverTest");
 		installService("tomcat", 1);
 		execute();
 		killOnlyAgent();
 		execute();
 		Assert.assertEquals(getOnlyServiceInstanceState().getProgress(), ServiceInstanceState.Progress.INSTANCE_STARTED);
-		Iterable<URL> agentIds = getAgentIds();
+		Iterable<URI> agentIds = getAgentIds();
 		Assert.assertEquals(Iterables.size(agentIds),2);
-		URL secondAgentId = Iterables.get(agentIds, 1);
+		URI secondAgentId = Iterables.get(agentIds, 1);
 		Assert.assertEquals(getOnlyServiceInstanceState().getAgentExecutorId(),secondAgentId);	
 	}
 
@@ -181,82 +235,88 @@ public class ServiceGridOrchestrationTest {
 //	}
 
 
-	private void installService(String name, int numberOfInstances) throws MalformedURLException {
+	private void installService(String name, int numberOfInstances) throws URISyntaxException {
 		ServiceConfig serviceConfig = new ServiceConfig();
 		serviceConfig.setDisplayName(name);
 		serviceConfig.setNumberOfInstances(numberOfInstances);
-		serviceConfig.setServiceUrl(getServiceUrl(name));
+		serviceConfig.setServiceId(getServiceURI(name));
 		final InstallServiceTask installServiceTask = new InstallServiceTask();
 		installServiceTask.setServiceConfig(serviceConfig);
 		client.addServiceTask(orchestratorExecutorId, installServiceTask);
 	}
 
-	private URL getServiceUrl(String name) throws MalformedURLException {
-		return new URL("http://services/" + name);
+	private URI getServiceURI(String name) throws URISyntaxException {
+		return new URI("http://localhost/services/" + name);
 	}
 	
-	private void orchestrate() {
-		client.addServiceTask(orchestratorExecutorId, new OrchestrateTask());
-		orchestratorContainer.stepTaskExecutor();
-	}
-	
-	private void execute() throws MalformedURLException {
+	private void execute() throws URISyntaxException {
 
-		for (int i = 0 ; i < 1000 ;i++) {
+		int consecutiveEmptyCycles = 0;
+		for (int i = 0 ; i < 120 ;) {
 
-			boolean stop = true;
-			orchestrate();
+			boolean emptyCycle = true;
+			OrchestrateTask orchestrateTask = new OrchestrateTask();
+			orchestrateTask.setMaxNumberOfOrchestrationSteps(100);
+			client.addServiceTask(orchestratorExecutorId, orchestrateTask);
 			
 			for (MockTaskContainer container : containers) {
-				if (container.stepTaskExecutor()) {
-					stop = false;
+				Assert.assertEquals(container.getExecutorId().getHost(),"localhost");
+				while (container.stepTaskExecutor()) {
+					if (!container.getExecutorId().equals(orchestratorExecutorId)) {
+						emptyCycle = false;
+					}
+					i++;
 				}
 			}
-						
-			if (stop) {
+
+			if (emptyCycle) {
+				consecutiveEmptyCycles++;
+			}
+
+			if (consecutiveEmptyCycles > 60) {
 				return;
 			}
 		}
 		StringBuilder sb = new StringBuilder();
-		Iterable<URL> servicesIds = state.getElementIdsStartingWith(new URL("http://services/"));
-		for (URL url : servicesIds) {
-			ServiceState serviceState = state.getElement(state.getLastElementId(url), ServiceState.class);
+		Iterable<URI> servicesIds = state.getElementIdsStartingWith(new URI("http://services/"));
+		for (URI URI : servicesIds) {
+			ServiceState serviceState = state.getElement(state.getLastElementId(URI), ServiceState.class);
 			sb.append("service: " + serviceState.getServiceConfig().getDisplayName());
 			sb.append(" - ");
-			for (URL instanceUrl : serviceState.getInstancesIds()) {
-				ServiceInstanceState instanceState = state.getElement(state.getLastElementId(instanceUrl), ServiceInstanceState.class);
-				sb.append(instanceUrl).append("[").append(instanceState.getProgress()).append("] ");
+			for (URI instanceURI : serviceState.getInstancesIds()) {
+				ServiceInstanceState instanceState = state.getElement(state.getLastElementId(instanceURI), ServiceInstanceState.class);
+				sb.append(instanceURI).append("[").append(instanceState.getProgress()).append("] ");
 			}
 			
 		}
 		
 		Assert.fail("Executing too many cycles progress=" + sb);
 	}
-	
 
-	private ServiceInstanceState getOnlyServiceInstanceState()
-			throws MalformedURLException {
-		Iterable<URL> instanceIds = state.getElementIdsStartingWith(new URL("http://localhost/services/tomcat/instances/"));
+	private ServiceInstanceState getOnlyServiceInstanceState() throws URISyntaxException {
+		Iterable<URI> instanceIds = state.getElementIdsStartingWith(new URI("http://localhost/services/tomcat/instances/"));
 		Assert.assertEquals(Iterables.size(instanceIds),1);
 		
 		ServiceInstanceState instanceState = state.getElement(state.getLastElementId(Iterables.getOnlyElement(instanceIds)), ServiceInstanceState.class);
 		return instanceState;
 	}
 
-	private Iterable<URL> getAgentIds() throws MalformedURLException {
-		return state.getElementIdsStartingWith(new URL("http://localhost/agent/"));
+	private Iterable<URI> getAgentIds() throws URISyntaxException {
+		return state.getElementIdsStartingWith(new URI("http://localhost/agent/"));
 	}
 
-	private void killOnlyAgent() throws MalformedURLException {
+	private void killOnlyAgent() throws URISyntaxException {
 		killAgent(getOnlyAgentId());
 	}
 	
-	private void killAgent(URL agentId) {
+	private void killAgent(URI agentId) {
 		for (MockTaskContainer container : containers) {
 			if (container.getExecutorId().equals(agentId)) {
+				logger.info("Killed agent " + agentId);
 				container.kill();
 				return;
 			}
 		}
+		Assert.fail("Failed to kill agent " + agentId);
 	}
 }
